PR/50819: David Binderman: Delete dead code.